--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PDF Viewer with turn.js</title>
-    <script src="https://unpkg.com/pdfjs-dist@2.13.272/build/pdf.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4.0.1/turn.min.js"></script>
+    <script src="./pdf.js"></script>
+    <script src="./turn.min.js"></script>
     <style>
         body {
             margin: 0;
